--- a/main.html
+++ b/main.html
@@ -7,6 +7,12 @@
 </head>
 
 <body>
+	<div id="count">
+		<p>0</p>
+	</div>
+
+	<button onclick="Increment()">Increment</button>
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
