--- a/main.html
+++ b/main.html
@@ -7,9 +7,7 @@
 </head>
 
 <body>
-	<div id="counter">
-		<p>0</p>
-	</div>
+	<p id="counter"></p>
 
 	<button onclick="Increment()">Increment</button>
 	
