--- a/main.html
+++ b/main.html
@@ -6,12 +6,11 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
-	<p id="counter"></p>
-
-	<button onclick="Increment()">Increment</button>
-	
+<body>	
 	<!-- the entire body must be written by student -->
+<p id="counter">0</p>
+<button id="incrementBtn" onclick="increment()">Increment</button>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
